loading apps for plan
